2009-06-28  Murray Cumming  <murrayc@murrayc.com>

	Fix an error check.

	* glom/xsl_utils.cc: transform_and_open(): Fix the check for a failed 
	gtk_show_uri(), so we really check. Noticed while stealing this code 
	for vidrot.

2009-06-27  Armin Burgmeier  <armin@openismus.com>

	* ldtp/database-creation/postgres-central-empty.xml:
	* ldtp/database-creation/postgres-self-empty.xml:
	* ldtp/database-creation/sqlite-empty.xml: Added missing files.

	* ldtp/database-creation/create-db.py: Allow passing the datafilename
	as an argument when the script is called directly, not by ldtprunner.

	* ldtp/README: Updated the section on how to execute a single test
	script.

2009-06-26  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/document/bakery/document.h: Document that failure_code
	should be >= 1, so that we can detect whether the document could not
	be opened because it couldn't be read from disk, or a custom error
	code was set.

	* glom/libglom/document/document.h: Set the value of
	LOAD_FAILURE_CODE_FILE_VERSION_TOO_NEW to 1, to honor the requirement
	explained above. This fixes showing the wrong error message when the
	document could not be loaded from disk.

2009-06-26  Armin Burgmeier  <armin@openismus.com>

	* glom/application.cc (existing_or_new_new): When the new database
	could be created successfully, then add the document to the recent
	files list.

2009-06-26  Armin Burgmeier  <armin@openismus.com>

	* glom/frame_glom.cc
	(connection_request_password_and_choose_new_database_name): Remember
	the port also for centrally hosted documents when a successful
	connection could be made.

	* ldtp/database-creation/create-db.py: For empty documents, call the
	initial table 'test_table', not 'TestTable', because of bug #587051.

2009-06-26  Armin Burgmeier  <armin@openismus.com>

	* glom/dialog_glom.h:
	* glom/dialog_glom.cc: Added an optional second parameter to the
	constructor, to specify a title name for the dialog.
